@@ -253,3 +253,13 @@ function closepopup() {
 		document.removeEventListener("scroll", noscroll)
 	}
 }
+
+function css(selector, property, value) {
+	for (var i=0; i<document.styleSheets.length;i++) {//Loop through all styles
+		//Try add rule
+		try {
+			document.styleSheets[i].insertRule(selector+ ' {'+property+':'+value+'}', document.styleSheets[i].cssRules.length);
+		} catch(err) {try { document.styleSheets[i].addRule(selector, property+':'+value);} catch(err) {}}//IE
+	}
+}
+
