@@ -82,16 +82,6 @@ Block Version Legend:<br>
 &bull; <b>1,2,3,4</b> - Old fasion blocks (before BIP9)<br>
 &bull; <b>?</b> - Unrecognized block version<br>
 <script>
-function css(selector, property, value) {
-	for (var i=0; i<document.styleSheets.length;i++) {//Loop through all styles
-		//Try add rule
-		try {
-			document.styleSheets[i].insertRule(selector+ ' {'+property+':'+value+'}', document.styleSheets[i].cssRules.length);
-		} catch(err) {try { document.styleSheets[i].addRule(selector, property+':'+value);} catch(err) {}}//IE
-	}
-}
-
-
 function switch_stats_type() {
 	if (stats_type_pro.checked) {
 		css('.stat1', 'display', 'table-cell')
