@@ -1,4 +1,5 @@
 1.9.2
+* Client/WebUI/Network: Make some extra information about the nodes switchable on/off
 * Client: Show number of records (txs) while loading UTXO.db
 * Client/WebUI/Blocks: Removed minimum fee from the block table. Moved to the fee stats chart, also added maximum
 * Client: show progess of loading/saving balance of P2KH/P2SH addresses
